# macOS-Persistence-Radar

./: .gitignore  CHANGELOG.md  Makefile  README.md  macOS-Persistence-Radar.spec  pyproject.toml  requirements.txt
assets/icons/: macos-persistence-radar-icon.icns
docs/: RELEASE_CHECKLIST.md
fixtures/: browser_extension_manifest.json  launch_agent_curl_bash.plist  launch_agent_run_at_load.plist  native_messaging_host.json  profile_proxy_root.mobileconfig  sample_findings.json  shell_profile_curl_bash
persistence_radar/: __init__.py  cli.py  main.py
persistence_radar/assets/icons/: __init__.py
persistence_radar/core/: app_logging.py  baseline.py  database.py  hashing.py  malware_kb.py  mitre.py  models.py  posture.py  reporting.py  scan.py  scoring.py  signing.py  table_sorting.py  timeline.py  trust.py
persistence_radar/gui/: __init__.py  app.py  components.py  icons.py
persistence_radar/scanners/: __init__.py  application_support.py  authorization_plugins.py  background_tasks.py  browser_extensions.py  certificates.py  common.py  cron.py  launchctl_state.py  launchd.py  login_items.py  native_messaging.py  path_hijack.py  privileged_helpers.py  profiles.py  shell_startup.py  system_extensions.py  tcc.py  users_groups.py
scripts/: generate_icns.py
tests/: test_advanced_scanners.py  test_baseline_reporting.py  test_gui_import.py  test_launchd.py  test_scan_result.py  test_table_sorting.py  test_timeline_posture.py  test_trust.py
